# shell-shot-changer

./: CMakeLists.txt  send_ki.sh  send_kp.sh  set_sum.sh
sender/: ki.out  kp.out
src/: out_yaml_format.cpp
